# goose

./: Cargo.toml  Cross.toml  plan.md
.github/workflows/: build-cli.yml  build-termux-cli.yml  build-termux.yml  bundle-desktop-linux.yml  canary.yml  check.yml  ci.yml
crates/goose/: Cargo.toml
crates/goose-bench/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-cli-lite/: Cargo.toml
crates/goose-cli-lite/src/: cli.rs  handlers.rs  lib.rs  main.rs
crates/goose-cli-lite/src/commands/: info.rs
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/developer/: mod.rs
crates/goose-mcp/src/google_drive/: mod.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: interactive_session.rs  lib.rs
crates/goose-server/src/routes/: info.rs  mod.rs
crates/goose/src/agents/: mod.rs  router_tool_selector.rs  tool_route_manager.rs
crates/mcp-client/: Cargo.toml
crates/mcp-core/: Cargo.toml
crates/mcp-server/: Cargo.toml
