[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.1.0"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/block/goose"
description = "An AI agent"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[workspace.dependencies]
rmcp = { version = "0.5.0", features = ["schemars", "auth"] }
webbrowser = { version = "1.0" }
anyhow = { version = "1.0.94" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
once_cell = { version = "1.20.2" }
async-trait = { version = "0.1.86" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls-native-roots", "cookies", "gzip", "brotli", "deflate", "zstd", "charset", "http2", "stream", "blocking"] }

# Patch for Windows cross-compilation issue with crunchy
[patch.crates-io]
crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }
