[package]
name = "goose-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-server = { path = "../mcp-server" }
rmcp = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.5"
base64 = "0.21"
thiserror = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = "1.5"
shellexpand = "3.1.0"
indoc = "2.0.5"
xcap = { git = "https://github.com/shawn111/xcap", branch = "android" }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
etcetera = "0.8.0"
tempfile = "3.8"
include_dir = "0.7.4"
google-apis-common = "7.0.0"
google-drive3 = "6.0.0"
google-sheets4 = "6.0.0"
google-docs1 = "6.0.0"
webbrowser = { workspace = true }
http-body-util = "0.1.2"
regex = "1.11.1"
once_cell = { workspace = true }
ignore = "0.4"
lopdf = "0.35.0"
docx-rs = "0.4.7"
image = "0.24.9"
umya-spreadsheet = "2.2.3"
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
utoipa = { version = "4.1", optional = true }
hyper = "1"
serde_with = "3"
which = "6.0"
glob = "0.3"


[dev-dependencies]
serial_test = "3.0.0"
sysinfo = "0.32.1"

[features]
utoipa = ["dep:utoipa"]
