[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls-native-roots"] }
rmcp = { workspace = true, features = ["client", "transport-child-process"]}
eventsource-client = "0.12.0"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
url = "2.5.4"
thiserror = "1.0"
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["timeout", "util"] }
rand = "0.8"
nix = { version = "0.30.1", features = ["process", "signal"] }
# OAuth dependencies
axum = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
nanoid = "0.4"
webbrowser = { workspace = true }
serde_urlencoded = "0.7"

[dev-dependencies]
mockito = "1.5"
